Fixed so carouel controls don't overlap with carousel.

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -98,6 +98,23 @@ a{
     border-style: none;
 }
  
+.row{
+    display: flex;
+    height:inherit;
+}
+
+.column {
+    padding: 10px;
+    width:70%;
+    text-align:center;
+}
+/* for carousel */
+.control-column{
+	padding: 5px;
+  	width:15%;
+  	text-align:center;
+}
+
 
 /*==========================
     SCROLLBAR 
@@ -161,7 +178,7 @@ header h3{
     text-align: center;
 }
 
-.nav-overlay a{
+.nav-item{
     text-decoration: none;
     font-family: 'Press Start 2P', serif;
     font-size: 1.5rem;
@@ -172,7 +189,7 @@ header h3{
     color: var(--cyan);
 }
 
-.nav-overlay a:hover, .nav-overlay a:focus, .nav-overlay a:active{
+.nav-item:hover, .nav-item:active{
     color: var(--yellow);
     text-shadow: 0px 0px 20px;
 }
@@ -210,13 +227,12 @@ header h3{
 /*==========================
     ICONS
 ============================*/
-/* style for icons*/
 .icons{
     font-size: 35px;
     margin:auto;
     text-align:center;
 }
-/* creates circle around icon */
+
 .icon-circle{
     background-color:var(--light);
     height:7rem;
@@ -228,6 +244,7 @@ header h3{
     justify-content: center !important;
     pointer-events: none;
 }
+
 
 /*==========================
     BACKGROUND
@@ -280,24 +297,15 @@ header h3{
     margin: auto;
 }
 
-.slideContent{
-	margin: 1rem 3rem;
-}
-
 .prev, .next {
     cursor: pointer;
-    position: absolute;
+    position: relative;
     top: 50%;
     width: auto;
-    padding: 16px;
     font-weight: bold;
     opacity: 0.5;
     transition: 0.6s ease;
     user-select: none;   
-}
-
-.next {
-    right: 0;
 }
 
 .prev:hover, .next:hover {
@@ -328,6 +336,7 @@ header h3{
 @-webkit-keyframes fade { from {opacity: .2} to {opacity: 1} }
   
 @keyframes fade { from {opacity: .2} to {opacity: 1} }
+
 
 /*==========================
     FORM ITEMS 
@@ -449,8 +458,6 @@ footer p{
         max-width:1320px
     }
 }
-
-
 @media(min-height: 1400px){
     .content-container{
         max-width:1320px
